# Management

./: .gitignore  docker-compose.yml  pyproject.toml  requirements.txt  seed_db_direct.py  seed_users.py  verify_create_user.py  verify_department_management.py  verify_department_update.py  verify_full_user_edit.py  verify_role_management.py
backend/: Dockerfile  auth.py  crud.py  database.py  main.py  models.py  schemas.py
backend/routes/: auth.py  departments.py  users.py
frontend/: index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: ProtectedRoute.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/pages/: Dashboard.tsx  Login.tsx
